# UnlikelyRivals

./: .gitignore  CMakeLists.txt  Doxyfile  EscenaMenu2.cpp  EscenaMenu2.hpp  README.md  dbz_sky_matrix.txt
.github/workflows/: build.yml
assets/atlas/: tile_over.py
assets/config/: collisions.txt
assets/mapas/: playa_col_layer1.txt  playa_layer1.txt  playa_layer2.txt  playa_layer3.txt  tileset_layer1.txt  tileset_layer2.txt  tileset_layer3.txt  tileset_layer4.txt
assets/shaders/: agua.frag  bossfrag.frag  color.frag  contorno.frag  crepuscular.frag  iluminacion.frag  prueba.frag  pruebaVert.vert
documentacion/html/: annotated.html  annotated_dup.js  classes.html  dir_0441677452302eb816090ff991de4e4e.html  dir_0e267dab2ef77cc3cdfe8f99190e10e7.html  dir_0e267dab2ef77cc3cdfe8f99190e10e7.js  dir_0e76371a6e5d8bd24b3a9cef3d7741bf.html  dir_0e76371a6e5d8bd24b3a9cef3d7741bf.js  dir_0e92d1edee5c61454efc2edd06365ed4.html  dir_0f281c11bc1f39865005d80d5e61afda.html  dir_0f281c11bc1f39865005d80d5e61afda.js  dir_0f4107ffdb13ce8db4f9bed219a312de.html  dir_11d10c1281c5999bede9432551552dde.html  dir_12e8bf48cb2161276510f1dc67403e30.html  dir_1326e9a62741b40b4c109f20afb5d2b6.html  dir_15965e2223de831aef34241acacb2c54.html  dir_15d6479b66b122d0845dc9dec179d7ea.html  dir_1745f5bccf01c1512002e5aa14f1353b.html  dir_1b3ed549cc672b31752cefef37158a01.html  dir_1b3ed549cc672b31752cefef37158a01.js  dir_1c0b5c3cb1ec1342146c026d04d845ee.html  dir_1c0b5c3cb1ec1342146c026d04d845ee.js  dir_1c82c3e17c6ccb6e908cd5ec3a76f49b.html  dir_22506095f99e37305d1663b92a90fddc.html  dir_22506095f99e37305d1663b92a90fddc.js  dir_23f2851b612ed6bdd8779c5cd6f60ecb.html  dir_2481800e57157fd398d3bb06b5ae4f36.html  dir_2ad15ea271eda5c1a0cc8958774aab28.html  dir_2ad15ea271eda5c1a0cc8958774aab28.js  dir_32090e770afd755e60dfdcc6cae2b863.html  dir_320ba9f67934cb2027dbb2737b83e8da.html  dir_32b595da3aca0ed64e24f7a4b1e92204.html  dir_34e9a5f624ac092a9ae2401c28d616d7.html  dir_3627f617f696d9416c42ab317ccc49ce.html  dir_373f0195719328190124d539612ce620.html  dir_397f3c940b46d605302be6a6cf42ee4b.html  dir_3c6e4b569ef8c712307e90dc72dd8d2b.html  dir_3c6e4b569ef8c712307e90dc72dd8d2b.js  dir_40be4ce3d0dc466106a8b55b697a2271.html  dir_41ac56daf6d58cb91e8d10dff692c449.html  (+160 more)
documentacion/html/d0/d04/: structImGuiTableColumn-members.html
documentacion/html/d0/d06/: classCE_1_1IStats-members.html
documentacion/html/d0/d0a/: classCE_1_1CamaraCuadro-members.html
documentacion/html/d0/d16/: structImGuiListClipperRange-members.html
documentacion/html/d0/d1b/: structImGuiTableColumnSortSpecs-members.html
documentacion/html/d0/d22/: structImChunkStream.html
documentacion/html/d0/d30/: md_README.html
documentacion/html/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+87 more)
documentacion/latex/: annotated.tex  dir_11d10c1281c5999bede9432551552dde.tex  dir_1c82c3e17c6ccb6e908cd5ec3a76f49b.tex  dir_45359432c8268bf56bca676685b35f56.tex  dir_4f636e46b298919a819a900db95bee8e.tex  dir_56baed6dcab2f0da4ebff02bd05bccdb.tex  dir_86f64a97f091f3ad21a621c3d810792e.tex  dir_8b68a0713bfda8cb2375ff7049bc9ecd.tex  dir_b5fd01b70b8887ff731c5516bbbda194.tex  dir_dc92dd9a292455da7374af48c96d83c7.tex  dir_df16b9cf2b6cba61bcfd0c004a197950.tex  dirs.tex  files.tex  hierarchy.tex  refman.tex  topics.tex
scratch/: find_platforms.py  scan_new_platform.py  scan_region.py
src/Juego/: Globales.hpp  Juego.cpp  Juego.hpp
src/Juego/Componentes/: IJComponentes.cpp  IJComponentes.hpp
src/Juego/Escenas/: EscenaControles.cpp  EscenaControles.hpp  EscenaMenu2.cpp  EscenaMenu2.hpp  EscenaMenu3.cpp  EscenaMenu3.hpp  Escena_Atlas.cpp  Escena_Atlas.hpp  Escena_Camara.cpp  Escena_Camara.hpp  Escena_Menu.cpp  Escena_Menu.hpp  Escena_Prueba.cpp  Escena_Prueba.hpp  Escena_SS.cpp  Escena_SS.hpp  Escena_Sim.cpp  Escena_Sim.hpp  Escena_SpriteTiles.cpp  Escena_SpriteTiles.hpp  Escena_Vibora.cpp  Escena_Vibora.hpp
src/Juego/Figuras/: Figuras.cpp  Figuras.hpp
src/Juego/Maquinas/: CMakeLists.txt  FSM.hpp
src/Juego/Maquinas/Balas/: BalasBoom.cpp  BalasBoom.hpp  BalasIdle.cpp  BalasIdle.hpp
src/Juego/Maquinas/Bosses/: AttackBoss.cpp  AttackBoss.hpp  CMakeLists.txt  FSMBoss.hpp  IdleBoss.cpp  IdleBoss.hpp
src/Juego/Maquinas/Naves/: CorrerJugador.cpp  CorrerJugador.hpp  DownBJugador.cpp  DownBJugador.hpp  GolpearJugador.cpp  GolpearJugador.hpp  IdleJugadores.cpp  IdleJugadores.hpp  MoverJugadores.cpp  MoverJugadores.hpp  PatearJugador.cpp  PatearJugador.hpp  RecibirGolpe.cpp  RecibirGolpe.hpp  SaltarJugador.cpp  SaltarJugador.hpp
src/Juego/Personajes/: Goku.hpp  MasterChief.hpp  Snoopy.hpp
src/Juego/Sistemas/: Sistemas.cpp  Sistemas.hpp
src/Juego/objetos/: EnteVibora.cpp  EnteVibora.hpp  Entidad.cpp  Entidad.hpp  Persona.cpp  Persona.hpp  Texto.cpp  Texto.hpp  TileMap.cpp  TileMap.hpp
src/Main/: CMakeLists.txt  main.cpp
src/Motor/: Motor.cpp  Motor.hpp
src/Motor/App/: ALayer.hpp
src/Motor/Camaras/: Camaras.cpp  Camaras.hpp  CamarasGestor.cpp  CamarasGestor.hpp
src/Motor/Componentes/: IComponentes.cpp  IComponentes.hpp
src/Motor/GUI/: GDock.cpp  GDock.hpp  GLayer.hpp  GListaObjetos.cpp  GListaObjetos.hpp  GLogger.cpp  GLogger.hpp  GPaths.cpp  GPaths.hpp  GPropiedades.cpp  GPropiedades.hpp  GViewport.cpp  GViewport.hpp
src/Motor/Inputs/: Botones.cpp  Botones.hpp  InputBuffer.cpp  InputBuffer.hpp
src/Motor/Primitivos/: CEPool.cpp  CEPool.hpp  Escena.hpp  GestorAssets.cpp  GestorAssets.hpp  GestorColisiones.cpp  GestorColisiones.hpp  GestorEscenas.cpp  GestorEscenas.hpp  Objetos.cpp  Objetos.hpp
src/Motor/Render/: Render.cpp  Render.hpp
src/Motor/Utils/: CEInterfaces.hpp  Lerp.hpp  Lista.hpp  Nodo.hpp  Utils.hpp  Vector2D.hpp
(+1154 files in other folders)
